--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8AC488</color>
+    <color name="colorPrimary">#C3FF9F</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#E64374</color>
 </resources>
