--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#C3FF9F</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#E64374</color>
+    <color name="colorAccent">#141414</color>
 </resources>
